--- a/introducao.tex
+++ b/introducao.tex
@@ -39,7 +39,7 @@ A grande quantidade de objetos distintos que podem estar em uma mesma linha de p
 O objetivo geral deste trabalho é desenvolver um sistema capaz de classificar objetos metálicos e medir seu respectivo ângulo de rotação com relação ao eixo x do plano cartesiano, sendo os objetos previamente conhecidos pelo sistema utilizando-se técnicas de aprendizagem de máquina.
 
 Para tanto, tem-se como objetivos específicos três objetivos que possibilitarão o cumprimento do objetivo geral.
-O primeiro objetivo específico é a analise e aplicação de técnicas de segmentação de imagens, como algoritmos de
+O primeiro objetivo específico é a análise e aplicação de técnicas de segmentação de imagens, como algoritmos de
 detecção de bordas, algoritmos de limiarização, segmentação baseada em crescimento de regiões.
 O segundo objetivo é analisar e aplicar técnicas de descrição de imagens, como algoritmos de descrição de contornos, descrição de regiões, entre outros.
 O terceiro objetivo é o emprego de uma técnica de aprendizagem de máquina, como redes neurais, que possibilite a classificação de objetos previamente conhecidos pelo sistema.
